Noteworthy changes in version 2.3.0 (unreleased) [C5/A5/R_]
------------------------------------------------

 * Interface changes relative to the 2.2.1 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 assuan_sock_set_flag     NEW.
 assuan_sock_get_flag     NEW.


Noteworthy changes in version 2.2.1 (2015-05-12) [C5/A5/R1]
------------------------------------------------

 * Documentation updates.

 * Fixed building for Windows with newer versions of Mingw.


Noteworthy changes in version 2.2.0 (2014-12-11) [C5/A5/R0]
------------------------------------------------

 * Added support for socket redirection.

 * Interface changes relative to the 2.1.3 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 assuan_sock_set_sockaddr_un  NEW.


Noteworthy changes in version 2.1.3 (2014-11-07) [C4/A4/R3]
------------------------------------------------

 * Performance fix for Windows.


Noteworthy changes in version 2.1.2 (2014-08-17) [C4/A4/R2]
------------------------------------------------

 * Fixed portability bugs for Solaris and AIX.

 * Added support for ppc64le.


Noteworthy changes in version 2.1.1 (2013-06-24) [C4/A4/R1]
------------------------------------------------

 * Limited support for 64 bit Windows.  This is sufficient for use by
   GpgEX.


Noteworthy changes in version 2.1.0 (2013-02-22)
------------------------------------------------

 * Support for the nPth library.

 * Add assuan_check_version and two version macros.

 * Interface changes relative to the 2.0.3 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ASSUAN_SYSTEM_NPTH_IMPL  NEW macro.
 ASSUAN_SYSTEM_NPTH       NEW macro.
 __assuan_read            NEW (private).
 __assuan_write           NEW (private).
 __assuan_recvmsg         NEW (private).
 __assuan_sendmsg         NEW (private).
 __assuan_waitpid         NEW (private).
 ASSUAN_VERSION           NEW macro.
 ASSUAN_VERSION_NUMBER    NEW macro.
 assuan_check_version     NEW.